--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,20 @@
 		<description></description>
 		<servlet-class>com.lms.controller.Register</servlet-class>
 	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>IdCard</display-name>
+		<servlet-name>IdCard</servlet-name>
+		<servlet-class>com.lms.controller.IdCard</servlet-class>
+	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>Email</display-name>
+		<servlet-name>Email</servlet-name>
+		<servlet-class>com.lms.controller.Email</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/Login</url-pattern>
@@ -23,6 +37,14 @@
 		<servlet-name>Register</servlet-name>
 		<url-pattern>/Register</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>IdCard</servlet-name>
+		<url-pattern>/IdCard</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Email</servlet-name>
+		<url-pattern>/Email</url-pattern>
+	</servlet-mapping>
 
 	<welcome-file-list>
 		<welcome-file>login.jsp</welcome-file>
@@ -30,5 +52,8 @@
 
 	<display-name>Archetype Created Web Application</display-name>
 
+	<session-config>
+		<session-timeout>10</session-timeout>
+	</session-config>
 
 </web-app>
