--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/main/java/com/lms/util/ValidatorUtil.java=UTF-8
+encoding//src/main/resources/lms.properties=UTF-8
 encoding//src/main/webapp/index.jsp=UTF-8
 encoding//src/main/webapp/top.jsp=UTF-8
+encoding//src/main/webapp/user_list.jsp=UTF-8
 encoding/<project>=UTF-8
