--- a/src/main/resources/lms.properties
+++ b/src/main/resources/lms.properties
@@ -1,4 +1,12 @@
+#数据库
 jdbcDriver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/lms?characterEncoding=utf-8
 uname=root
 password=807824
+
+#普通用户,VIP用户
+average=4
+VIP=10 
+
+#系统默认密码
+user.password=123456
