--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -85,6 +85,69 @@
 		<servlet-name>BookAdd</servlet-name>
 		<servlet-class>com.lms.controller.book.BookAdd</servlet-class>
 	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>BookUpdate</display-name>
+		<servlet-name>BookUpdate</servlet-name>
+		<servlet-class>com.lms.controller.book.BookUpdate</servlet-class>
+	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>UserList</display-name>
+		<servlet-name>UserList</servlet-name>
+		<servlet-class>com.lms.controller.user.UserList</servlet-class>
+	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>UserDelete</display-name>
+		<servlet-name>UserDelete</servlet-name>
+		<servlet-class>com.lms.controller.user.UserDelete</servlet-class>
+	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>UserStart</display-name>
+		<servlet-name>UserStart</servlet-name>
+		<servlet-class>com.lms.controller.user.UserStart</servlet-class>
+	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>UserDisabled</display-name>
+		<servlet-name>UserDisabled</servlet-name>
+		<servlet-class>com.lms.controller.user.UserDisabled</servlet-class>
+	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>UserAdd</display-name>
+		<servlet-name>UserAdd</servlet-name>
+		<servlet-class>com.lms.controller.user.UserAdd</servlet-class>
+	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>UserUpgrade</display-name>
+		<servlet-name>UserUpgrade</servlet-name>
+		<servlet-class>com.lms.controller.user.UserUpgrade</servlet-class>
+	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>UserDemotion</display-name>
+		<servlet-name>UserDemotion</servlet-name>
+		<servlet-class>com.lms.controller.user.UserDemotion</servlet-class>
+	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>UserUpdate</display-name>
+		<servlet-name>UserUpdate</servlet-name>
+		<servlet-class>com.lms.controller.user.UserUpdate</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/Login</url-pattern>
@@ -132,6 +195,42 @@
 	<servlet-mapping>
 		<servlet-name>BookAdd</servlet-name>
 		<url-pattern>/BookAdd</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>BookUpdate</servlet-name>
+		<url-pattern>/BookUpdate</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UserList</servlet-name>
+		<url-pattern>/UserList</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UserDelete</servlet-name>
+		<url-pattern>/UserDelete</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UserStart</servlet-name>
+		<url-pattern>/UserStart</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UserDisabled</servlet-name>
+		<url-pattern>/UserDisabled</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UserAdd</servlet-name>
+		<url-pattern>/UserAdd</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UserUpgrade</servlet-name>
+		<url-pattern>/UserUpgrade</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UserDemotion</servlet-name>
+		<url-pattern>/UserDemotion</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UserUpdate</servlet-name>
+		<url-pattern>/UserUpdate</url-pattern>
 	</servlet-mapping>
 
 	<welcome-file-list>
