后台完成借书管理列表测试： 1 图书用户列表,以图书为key,借阅该本图书的用户集合为value; 2 用户图书列表,以用户为key,该用户所借图书集合为value.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -148,6 +148,20 @@
 		<servlet-name>UserUpdate</servlet-name>
 		<servlet-class>com.lms.controller.user.UserUpdate</servlet-class>
 	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>BookUserList</display-name>
+		<servlet-name>BookUserList</servlet-name>
+		<servlet-class>com.lms.controller.borrow.BookUserList</servlet-class>
+	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>UserBookList</display-name>
+		<servlet-name>UserBookList</servlet-name>
+		<servlet-class>com.lms.controller.borrow.UserBookList</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/Login</url-pattern>
@@ -231,6 +245,14 @@
 	<servlet-mapping>
 		<servlet-name>UserUpdate</servlet-name>
 		<url-pattern>/UserUpdate</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>BookUserList</servlet-name>
+		<url-pattern>/BookUserList</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UserBookList</servlet-name>
+		<url-pattern>/UserBookList</url-pattern>
 	</servlet-mapping>
 
 	<welcome-file-list>
