前台完成借书管理列表显示: 1:图书用户管理,可根据图书ID遍历所有借阅此图书用户的相关信息,也可以遍历所有图书和其借阅用户的相关信息; 2:用户图书管理,可根据用户ID遍历该用户的所有借阅图书的相关信息,也可以遍历所有用户和其借阅图书的相关信息.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -162,6 +162,20 @@
 		<servlet-name>UserBookList</servlet-name>
 		<servlet-class>com.lms.controller.borrow.UserBookList</servlet-class>
 	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>SingleBookUserList</display-name>
+		<servlet-name>SingleBookUserList</servlet-name>
+		<servlet-class>com.lms.controller.borrow.SingleBookUserList</servlet-class>
+	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>SingleUserBookList</display-name>
+		<servlet-name>SingleUserBookList</servlet-name>
+		<servlet-class>com.lms.controller.borrow.SingleUserBookList</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/Login</url-pattern>
@@ -253,6 +267,14 @@
 	<servlet-mapping>
 		<servlet-name>UserBookList</servlet-name>
 		<url-pattern>/UserBookList</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>SingleBookUserList</servlet-name>
+		<url-pattern>/SingleBookUserList</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>SingleUserBookList</servlet-name>
+		<url-pattern>/SingleUserBookList</url-pattern>
 	</servlet-mapping>
 
 	<welcome-file-list>
