--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -176,6 +176,13 @@
 		<servlet-name>SingleUserBookList</servlet-name>
 		<servlet-class>com.lms.controller.borrow.SingleUserBookList</servlet-class>
 	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>Borrow</display-name>
+		<servlet-name>Borrow</servlet-name>
+		<servlet-class>com.lms.controller.borrow.Borrow</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/Login</url-pattern>
@@ -275,6 +282,10 @@
 	<servlet-mapping>
 		<servlet-name>SingleUserBookList</servlet-name>
 		<url-pattern>/SingleUserBookList</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Borrow</servlet-name>
+		<url-pattern>/Borrow</url-pattern>
 	</servlet-mapping>
 
 	<welcome-file-list>
